--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <head>
 
         
-        <title>M.LIM</title>
+        <title>matthewlim.ml</title>
         <style type="text/css">
             body, html
             {
